# robot_ros

./: .gitignore  README.md  camera.launch  camera.sh  control.launch  control.sh  control_epuck.launch  control_epuck.sh  epuck.launch  epuck.sh  make.sh  model.sh  path.sh  robot_ros.desktop
desktop/: robot_camera.desktop  robot_control.desktop  robot_model.desktop  robot_path.desktop
src/control/: CMakeLists.txt  package.xml
src/control/src/: Control.cpp  Control.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp  resources.qrc
src/epuck/: CMakeLists.txt  package.xml
src/epuck/src/: EPuck.cpp  EPuck.hpp  main.cpp
src/model/: robot.world  robot_orig.world
src/path_planning/: CMakeLists.txt  package.xml
src/path_planning/scripts/: path_planning  path_spline.py  path_ui.py  ros_pose.py  target.py
src/vision_pose/: CMakeLists.txt  package.xml
src/vision_pose/scripts/: vision_pose
track/: calibrate.ini  calibrate.yaml  calibrate_camera_pose.launch  calibrate_camera_pose.sh  run-calibrate.sh  run-camera.launch  run-camera.sh  run-track.launch  run-track.sh  run.launch  run.sh
